fix: add z-index do player

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -95,6 +95,7 @@ body {
   gap: 1rem;
   border-top: 1px solid $bg-color-second;
   background-color: $bg-color;
+  z-index: 999999;
 
   .player-info {
     margin: 0.7rem 0;
